# rust_todo_backend

./: .env  .gitignore  Decisiones Técnicas.md  README.MD  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  20250820223100_add_assigned_to_to_tasks.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs
backend/src/security/: admin_guard.rs  mod.rs  rate_limiter.rs
backend/src/tests/: integration.rs
frontend/: Dockerfile  craco.config.js  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/public/locales/en/: translation.json
frontend/public/locales/es/: translation.json
frontend/src/: App.css  App.js  index.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/components/: AdminDashboard.js  BottomNavBar.js  Dashboard.js  Login.js  Register.js  TopBar.js
scripts/: entrypoint.sh  setup.sh  test.sh
